--- a/.gitignore
+++ b/.gitignore
@@ -30,12 +30,15 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
-
 # typescript
 *.tsbuildinfo
 
 # generated native folders
 /ios
 /android
+
+.env
+.env.local
+.env.development
+.env.test
+.env.production
